<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

  <fragment
      android:id="@+id/navigation_home"
      android:name="com.sehatq.test.fragment.DashboardFragment"
      android:label="@string/title_home"
      tools:layout="@layout/fragment_dashboard_product" />

  <fragment
      android:id="@+id/navigation_feed"
      android:name="com.sehatq.test.fragment.DashboardFragment"
      android:label="@string/title_feed"
      tools:layout="@layout/fragment_dashboard_product" />

  <fragment
      android:id="@+id/navigation_cart"
      android:name="com.sehatq.test.fragment.DashboardFragment"
      android:label="@string/title_cart"
      tools:layout="@layout/fragment_dashboard_product" />

  <fragment
      android:id="@+id/navigation_profile"
      android:name="com.sehatq.test.fragment.PurchaseHistoryProductFragment"
      android:label="@string/title_profile"
      tools:layout="@layout/fragment_dashboard_product" />
</navigation>