<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_large">

        <LinearLayout
            android:id="@+id/layout_error_generic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/emoji_sad"
                android:textSize="@dimen/text_xxxlarge" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_default"
                android:gravity="center"
                tools:text="@string/error_fatal_restarting" />

            <Button
                android:id="@+id/btn_restart_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_restart_app" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_error_generic"
            android:layout_marginTop="@dimen/margin_default"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/txt_toggle_stacktrace"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/margin_default"
                    android:text="@string/action_show_hide_stacktrace" />

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_menu_share" />

            </RelativeLayout>

            <ScrollView
                android:id="@+id/scroll_stacktrace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:scrollbarStyle="outsideInset">

                <TextView
                    android:id="@+id/txt_stacktrace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:fontFamily="monospace"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/text_xsmall"
                    tools:text="Lorem ipsum dolor sit amet" />

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
